# YanNian-Mol

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Download_HerbalMDB_10000.ipynb  FINAL_RELEASE_NOTES.md  GITHUB_RELEASE_GUIDE.md  LICENSE  LifespanPredict.ipynb  LifespanPredictClass.ipynb  MANIFEST.in  Makefile  QUICK_REFERENCE.md  QUICK_START_GITHUB.md  QuerySample.csv  README.md  README_RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  TASK_10_SUMMARY.md  TASK_12_SUMMARY.md  TASK_13_SUMMARY.md  TASK_14_SUMMARY.md  TASK_1_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4_SUMMARY.md  TASK_5_SUMMARY.md  TASK_6_SUMMARY.md  TrainSample.csv  cleanup_repo.py  csv-anti-aging-set_20250909_with_urls_with_download_results.csv  elixirseeker_trainset.csv  geroprotectors_database2025-07-23.csv  mypy.ini  pubmed anti-aging compound search key word.ipynb  push_to_github.bat  pyproject.toml  pytest.ini  requirements-dev.txt  (+13 more)
.github/workflows/: ci.yml
.kiro/specs/code-optimization/: design.md  requirements.md  tasks.md
data/sample/: README.md
docs/: Makefile  README.md  benchmarking.md  ci_cd.md  conf.py  configuration.md  examples.rst  index.rst  installation.rst  performance_optimization_quick_reference.md  quickstart.rst  requirements.txt  troubleshooting.rst  validation.md
docs/api/: config.rst  data.rst  index.rst  models.rst  training.rst  utils.rst
examples/: config_example.py
lifespan_predictor/: __init__.py
lifespan_predictor/config/: __init__.py  config.py  default_config.yaml
lifespan_predictor/data/: __init__.py  dataset.py  featurizers.py  fingerprints.py  preprocessing.py
lifespan_predictor/models/: __init__.py  attentive_fp.py  layers.py  predictor.py
lifespan_predictor/training/: __init__.py  callbacks.py  metrics.py  trainer.py
lifespan_predictor/utils/: __init__.py  benchmark.py  io.py  logging.py  memory.py  profiling.py  visualization.py
notebooks/: 01_data_preprocessing.ipynb  02_model_training.ipynb  03_inference.ipynb  README.md
scripts/: create_release.py  github_release.py  prepare_release.py  run_benchmarks.py  run_ci_checks.py  validate_notebooks.py
tests/: README.md  __init__.py  test_config.py  test_dataset.py  test_featurizers.py  test_fingerprints.py  test_integration.py  test_metrics.py  test_models.py  test_preprocessing.py  test_training.py  test_utils.py
tests/data/: README.md  test_edge_cases.csv  test_molecules.csv
